# ainyt

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
crossword/: Cargo.toml  README.md
crossword/src/: lib.rs  main.rs  solver.rs  web.rs
wordle/: Cargo.toml  README.md
wordle/src/: algorithm.rs  lib.rs  main.rs  web.rs
wordle/src/algorithms/: mod.rs  naive.rs
wordle/tests/: integration_test.rs
