[package]
name = "crossword"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
chatgpt_rs = {git ="https://github.com/Maxuss/chatgpt_rs.git", branch ="master"}
thirtyfour.workspace = true
tokio.workspace = true
regex = "1.9"
futures = "0.3"
itertools = "0.10"